# memcal

./: .gitignore  Cargo.toml  README.md
src/: api.rs  db.rs  global.css  ical.rs  logger.rs  main.rs  web.rs
