[package]
name = "memcal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
headers = "0.4.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
ical = { version = "0.11.0", features = ["generator", "serde", "serde-derive"] }
icalendar = "0.16.3"
maud = { version = "0.26.0", features = ["axum"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonyflake = "0.2.0"
sqlx = { version = "0.8", features = [ "chrono", "runtime-tokio", "sqlite" ] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
